# zinnia

./: .clang-format  .clangd  .gdbinit  .gitignore  .gitmodules  .lldbinit  Cargo.toml  README.md  meson.build
.cargo/: config.toml
docs/: book.toml
docs/src/: entry_state.md
include/: stdatomic.h  stddef.h  stdlib.h  uacpi_types.h
include/kernel/: alloc.h  archctl.h  assert.h  clock.h  cmdline.h  compiler.h  console.h  elf.h  exec.h  futex.h  hashmap.h  init.h  (+24 more)
kernel/: Cargo.toml  kernel.ld  meson.build
kernel/arch/x86_64/: apic.c  gdt.c  hpet.c  idt.c  mem.c  meson.build  percpu.c  pmap.c  sched.c  serial.c  sys.c  syscall.c  trampoline.S  tsc.c  usercopy.c
kernel/arch/x86_64/include/bits/: elf.h  percpu.h  pmap.h  sched.h  types.h
kernel/arch/x86_64/include/x86_64/: apic.h  asm.h  defs.h  gdt.h  idt.h  smp.h  syscall.h  tsc.h  tss.h
kernel/boot/: main.c
kernel/boot/limine/: entry.c
kernel/core/: clock.c  console.c  futex.c  iovec.c  irq.c  meson.build  print.c  process.c  sched.c  spin.c  uacpi_glue.c
kernel/crates/initgraph/: Cargo.toml
kernel/crates/initgraph/src/: lib.rs
kernel/include/: stdatomic.h
kernel/include/kernel/: compiler.h  console.h  handle.h  mem.h  percpu.h  syscalls.h
kernel/klibc/: meson.build  string.c
kernel/mem/: init.c  meson.build  mmio.c  pmap.c  pmm.c  pt.c  slab.c  usercopy.c  virt.c  vm_object.c  vm_space.c  vmo.c  vmspace.c
kernel/src/: clock.rs  lib.rs  macros.rs  module.rs  panic.rs  percpu.rs
kernel/src/arch/: cpu.rs  executor.rs  irq.rs  mod.rs  sched.rs  virt.rs
kernel/src/arch/riscv64/: executor.rs  irq.rs  mod.rs  sched.rs  virt.rs
kernel/src/arch/x86_64/: consts.rs  cpu.rs  executor.rs  irq.rs  mod.rs  sched.rs  virt.rs
kernel/src/arch/x86_64/system/: acpi.rs  apic.rs  gdt.rs  hpet.rs  mod.rs  ps2.rs  rtc.rs  serial.rs  smp.rs  tsc.rs
kernel/src/boot/: limine.rs
kernel/src/device/: cmdline.rs  console.rs  devctl.rs  fbcon.rs  kmsg.rs  memfiles.rs  mod.rs  vt.rs
kernel/src/device/acpi/: mcfg.rs  mod.rs  uacpi.rs
kernel/src/device/block/: gpt.rs  io.rs  mod.rs  partition.rs  ram.rs
kernel/src/device/drm/: mod.rs  modes.rs  object.rs  plainfb.rs
kernel/src/device/dt/: driver.rs  mod.rs
kernel/src/device/input/: mod.rs
kernel/src/device/net/: dev.rs  interface.rs  local.rs  mod.rs  nic.rs
kernel/src/device/net/l2/: arp.rs  eth.rs  mac.rs  mod.rs  packet.rs
kernel/src/device/net/l3/: icmp.rs  ipv4.rs  mod.rs  raw.rs
kernel/src/device/net/l4/: mod.rs  tcp.rs  udp.rs
kernel/src/device/pci/: config.rs  device.rs  driver.rs  mod.rs
kernel/src/device/tty/: mod.rs  pty.rs
kernel/src/device/usb/: hub.rs  hub_class.rs  mod.rs  spec.rs
kernel/src/device/usb/hid/: mod.rs  parser.rs  usage.rs
kernel/src/device/usb/storage/: mod.rs
kernel/src/irq/: lock.rs  mod.rs
kernel/src/memory/: bump.rs  cache.rs  iovec.rs  mod.rs  pmm.rs  slab.rs  stack.rs  user.rs  view.rs
kernel/src/memory/virt/: allocator.rs  fault.rs  mmu.rs  mod.rs  shootdown.rs
kernel/src/posix/: errno.rs  utsname.rs
kernel/src/process/: itimer.rs  mod.rs  signal.rs  task.rs
kernel/src/sched/: mod.rs
kernel/src/syscall/: memory.rs  mod.rs  module.rs  numbers.rs  process.rs  signal.rs  socket.rs  system.rs  vfs.rs
kernel/src/system/acpi/: mod.rs
kernel/src/uapi/: access.rs  drm.rs  epoll.rs  fcntl.rs  input.rs  ioctls.rs  mman.rs  mod.rs  net.rs  poll.rs  resource.rs  signal.rs  socket.rs  sysconf.rs  time.rs  uio.rs  wait.rs
kernel/src/util/: event.rs  spin.rs
kernel/src/util/mutex/: mod.rs  spin.rs
kernel/src/vfs/: cache.rs  epoll.rs  eventfd.rs  file.rs  inode.rs  mod.rs  pipe.rs  signalfd.rs  timerfd.rs
kernel/src/vfs/exec/: elf.rs  mod.rs  shebang.rs
kernel/src/vfs/fs/: devtmpfs.rs  initramfs.rs  mod.rs  tmpfs.rs
kernel/syscalls/: archctl.c  channel.c  dispatch.c  futex.c  handle.c  meson.build
kernel/vfs/: file.c  identity.c  init.c  meson.build  vfs.c
kernel/vfs/exec/: elf.c  formats.c
lib/: meson.build
pkgs/: dev-libs.yml  sys-boot.yml
servers/: meson.build
src/: .clang-format  .clangd  meson.build
src/include/: stdarg.h  stdatomic.h  stddef.h  stdint.h  stdlib.h  string.h  uacpi_types.h
src/include/common/: elf.h  syscall_numbers.h  utils.h
src/include/zinnia/: archctl.h  channel.h  handle.h  mem.h  namespace.h  random.h  status.h  syscall_numbers.h  syscall_stubs.h  system.h  thread.h
src/kernel/: kernel.ld  meson.build
src/kernel/arch/x86_64/: apic.c  gdt.c  hpet.c  idt.c  meson.build  mmu.c  percpu.c  sched.c  smp.c  sys.c  syscall.c  tsc.c  usercopy.c
src/kernel/arch/x86_64/include/bits/: irq.h  mem.h  percpu.h  sched.h  usercopy.h
src/kernel/arch/x86_64/include/x86_64/: gdt.h  smp.h  tss.h
src/kernel/boot/: cmdline.c  main.c
src/kernel/boot/limine/: entry.c
src/kernel/core/: clock.c  elf.c  irq.c  meson.build  namespace.c  panic.c  percpu.c  print.c  sched.c  uacpi_glue.c  vdso.c
src/kernel/include/: stdatomic.h
src/kernel/include/kernel/: alloc.h  assert.h  clock.h  cmdline.h  console.h  dlist.h  elf.h  hashmap.h  init.h  irq.h  mem.h  mmio.h  mmu.h  mutex.h  namespace.h  object.h  pager.h  panic.h  percpu.h  pmap.h  print.h  refcount.h  sched.h  syscall_numbers.h  syscalls.h  types.h  usercopy.h  vas.h  vdso.h  vec.h  virt.h  vmo.h  vmspace.h
src/kernel/include/vdso/: common.h  syscall_stubs.h
src/kernel/klibc/: dlist.c  meson.build  refcount.c  string.c
src/kernel/mem/: init.c  meson.build  mmio.c  mmu.c  pmap.c  pmm.c  slab.c  vas.c  virt.c  vmo.c  vmspace.c
src/kernel/syscalls/: archctl.c  channel.c  dispatch.c  handle.c  meson.build  random.c  system.c  thread.c  vas.c  vmo.c
src/kernel/vdso/: archctl.c  channel.c  handle.c  mem.c  meson.build  namespace.c  random.c  status.c  system.c  thread.c  vas.c  vdso.ld  vmo.c
src/lib/server/: crt.c  meson.build  string.c  vdso.c
src/servers/initd/: main.c  meson.build
src/servers/posixd/: main.c  meson.build  uname.c
support/: lsp-launcher.sh
tasks/: empty-image.sh  empty-image.yml  make-image.py  make-image.sh  make-image.yml  make-initramfs.sh  tasks.yml
tools/: host-llvm.yml
(+72 files in other folders)
