[workspace]
resolver = "3"
members = [
    "kernel",
    "bindings/*",
    "drivers/common/*",
    "drivers/block/*",
    "drivers/fs/*",
    "drivers/net/*",
    "drivers/serial/*",
    "drivers/usb/*",
    "drivers/video/*",
]

[workspace.dependencies]
zinnia = { path = "kernel" }
num_enum = { version = "0.7.6", default-features = false }
intrusive-collections = { version = "0.10.1", features = ["nightly"] }
bitflags = "2.10.0"
cfg-if = "1.0.4"
seq-macro = "0.3.6"

[profile.dev]
panic = "abort"
opt-level = 1   # If this is 0, the stack overflows almost instantly.
debug = true
strip = false

[profile.release]
panic = "abort"
opt-level = 3
debug = true
overflow-checks = false
strip = false
