[package]
name = "zinnia"
version = "0.2.0"
edition = "2024"
license = "GPL-2.0-only"

[lib]
crate-type = ["dylib"]

[dependencies]
initgraph = { path = "crates/initgraph" }
kernel_proc = { path = "crates/kernel_proc" }

uacpi-sys = { path = "../bindings/uacpi" }
flanterm-sys = { path = "../bindings/flanterm" }

bitflags = { workspace = true }
cfg-if = { workspace = true }
seq-macro = { workspace = true }
bytemuck = { version = "1.24.0", features = ["derive", "min_const_generics"] }
num-traits = { version = "0.2.19", default-features = false }
limine = { version = "0.5.0", optional = true }
rustc-demangle = { version = "0.1.26" }
intrusive-collections = { workspace = true }
paste = "1.0.15"
num_enum = { workspace = true }
async-trait = "0.1.89"
async-channel = { version = "2.5.0", default-features = false }

[features]
default = ["acpi", "boot_limine"]

# Debug features
track_spinlock_callers = []
syscall_log = []

# Boot protocols
boot_limine = ["dep:limine"]
boot_uefi = []

# System configurations
acpi = []
